feat(game): implement forfeit